Bug 691340 - debug build pcl fails to link _gs_abort
Summary: debug build pcl fails to link _gs_abort
Status: NOTIFIED FIXED
Alias: None
Product: GhostPCL
Classification: Unclassified
Component: PCL interpreter (show other bugs)
Version: master
Hardware: PC Windows XP
: P4 normal
Assignee: Henry Stiles
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-26 07:32 UTC by norbert.janssen
Modified: 2011-09-18 21:46 UTC (History)
0 users

See Also:
Customer: 661
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description norbert.janssen 2010-05-26 07:32:32 UTC
when building pcl-debug or udebug, the link fails with a complaint in gsicc_profilecache.o line 149, with undefined reference _gs_abort.
Comment 1 norbert.janssen 2010-05-26 07:32:51 UTC
built on CYGWIN/gcc
Comment 2 Henry Stiles 2010-05-26 16:12:40 UTC
Fixed in 11328.
Comment 3 Marcos H. Woehrmann 2011-09-18 21:46:26 UTC
Changing customer bugs that have been resolved more than a year ago to closed.