The languages (pcl, xps, pclxl) debug builds were broken with the icc branch merge, gs_abort() is not supported.  The code has been changed similarly to the old exit upon failed assertion code in gsalloc.c where gs_abort() is replaced with return, fixes bug #691340.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11328 a1074d23-0009-0410-80fe-cf8c14f379e6